CHATS_SIT/force-app/main/default/objects/batchsit_t_sbsd_indiv_care_level_hist__x.object
<CustomObject>
    <description>batchsit$t_sbsd_indiv_care_level_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sbsd_indiv_care_level_hist</externalName>
    <fields>
        <fullName>cde_level_care__c</fullName>
        <description>cde_level_care</description>
        <externalDeveloperName>cde_level_care</externalDeveloperName>
        <label>Care Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <description>cde_reason_ovrd</description>
        <externalDeveloperName>cde_reason_ovrd</externalDeveloperName>
        <label>Override code reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_age_dvlpl__c</fullName>
        <description>cnt_age_dvlpl</description>
        <externalDeveloperName>cnt_age_dvlpl</externalDeveloperName>
        <label>Age count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sbsd_indiv_care_level_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_grade_first__c</fullName>
        <description>dte_grade_first</description>
        <externalDeveloperName>dte_grade_first</externalDeveloperName>
        <label>First Grade Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_INDIV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Care Level Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sbsd_indiv_care_level_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_indiv_care_level__c</fullName>
        <description>idn_sbsd_indiv_care_level</description>
        <externalDeveloperName>idn_sbsd_indiv_care_level</externalDeveloperName>
        <label>Care Level ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_sbsd_indiv_care_level__x</referenceTo>
        <relationshipLabel>Care Level Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sbsd_indiv_care_level_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_indiv_care_level_hist__c</fullName>
        <description>idn_sbsd_indiv_care_level_hist</description>
        <externalDeveloperName>idn_sbsd_indiv_care_level_hist</externalDeveloperName>
        <label>Care Level ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sbsd_indiv_care_level_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_level_care__c</fullName>
        <description>nbr_seq_level_care</description>
        <externalDeveloperName>nbr_seq_level_care</externalDeveloperName>
        <label>Number sequence level care</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Care Level History</label>
    <pluralLabel>Care Level History</pluralLabel>
</CustomObject>